<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPassword"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_password_details"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Application name"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_application_name_or_website_url"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:id="@+id/etEditAppName"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_email"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_email"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:id="@+id/etEditAppUserName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:id="@+id/etEditAppPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/save_changes"
        android:id="@+id/btnSaveChanges"
        />

    </LinearLayout>

</LinearLayout>