<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_saver_LogoText"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:padding="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLoginUserNameLabel"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginUserName"
            android:hint="@string/etLoginUserName"
            android:layout_margin="10dp"
            android:padding="20dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLoginPassword"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:id="@+id/etLoginPassword"
            android:hint="@string/etLoginPassword"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/btnLoginLabel"
            android:layout_margin="10dp"
            android:id="@+id/btnLogin"
            />

    </LinearLayout>

</LinearLayout>